# Quadcopter

./: .gitignore
ardrone_helper/: ardrone_helper.h  camera_test.cpp
obstavoid/: CMakeLists.txt  main.cpp  obstavoid.cpp  obstavoid.h
obstavoid/contours/: CMakeLists.txt  ContourKeypoints.cpp  ContourKeypoints.h  Contours_Common.h  main.cpp
obstavoid/mops/: AdaptiveNonMaximalSuppression.cpp  AdaptiveNonMaximalSuppression.h  CMakeLists.txt  CMakeLists.txt~  MOPSDetector.cpp  MOPSDetector.h  MOPSExtractor.cpp  MOPSExtractor.h  MOPSFeatures.cpp  MOPSFeatures.h  MOPS_Common.h  Utils.cpp  Utils.h  main.cpp
obstavoid/pres/: pres.tex
obstavoid/pres/auto/: pres.el
obstavoid/report/: acmsiggraph.cls  bib_all.bib  report.tex
obstavoid/report/auto/: report.el
